compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__int_patterns.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go(x) {\n  let assert 4 = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert 4 = x
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    x:
    if x != 4 then
      builtins.throw
        (makeError
          "let_assert"
          "my/mod"
          3
          "go"
          "Pattern match failed, no pattern matched the value."
          { value = x; })
    else x;
in
{ }
