compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__operator_precedence.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  2.4 *. { 3.5 +. 6.0 }\n}\n"
---
let go = {}: 2.4 * (3.5 + 6.0); in {}
