compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__remainder.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  5 % 0 // => 0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  5 % 0 // => 0
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) remainderInt;
  
  go = { }: remainderInt 5 0;
in
{ }
