compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__repeated_int_negation.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  let a = 3\n  let b = --a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  let a = 3
  let b = --a
}


----- COMPILED NIX
let go = { }: let a = 3; in -(-a); in { }
