compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__numbers__wide_float_div.snap
---
source: compiler-core/src/nix/tests/numbers.rs
expression: "\nfn go() {\n  111111111111111111111111111111. /. 22222222222222222222222222222222222.\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) divideFloat;
  
  go =
    { }:
    divideFloat
      111111111111111111111111111111.
      22222222222222222222222222222222222.;
in { }
